# deflate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  core_tests.cpp  main.cpp
src/: CMakeLists.txt  bit_stream.cpp  bit_stream.h  crc.cpp  crc.h  deflate.cpp  deflate.h  huffman_code.cpp  huffman_code.h  huffman_table.cpp  huffman_table.h  huffman_tree.cpp  huffman_tree.h
